--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "brain-rizz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pwa:build": "npm run build && npm run pwa:analyze",
+    "pwa:analyze": "npx lighthouse --view --output=html --output-path=./lighthouse-report.html"
   },
   "eslintConfig": {
     "extends": [
